--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     
     --primary-clr : #000000;
     
-    --secondary-clr : #8d8d8d;
+    --secondary-clr : #585858;
     
     --tertiary-clr : #FFFFFF;
 
@@ -207,3 +207,83 @@ a{
     line-height: 1.6rem;
 }
 
+
+.info{
+    background-color: var(--secondary-clr);
+    width: 100%;
+    height: 75vh;
+    margin: 2rem auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-1>h4{
+    color: var(--tertiary-clr);
+    font-weight: 100;
+    font-family: var(--tertiary-fonts);
+    font-size: 2.4rem;
+    margin: 2rem auto;
+    margin-bottom: 0.8rem;
+    padding: 1rem 1rem 1rem 7rem;
+    line-height: 4rem;
+}
+
+.info-1>p{
+    color: var(--primary-clr);
+    font-weight: 400;
+    font-family: var(--primary-fonts);
+    font-size: 1.3rem;
+    
+    padding: 1rem 1rem 1rem 7rem;
+    line-height: 2rem;
+}
+
+.info-2>p{
+    color: var(--primary-clr);
+    font-weight: 400;
+    font-family: var(--primary-fonts);
+    font-size: 1.3rem;
+    
+    padding: 1rem 1rem 1rem 5rem;
+    line-height: 2rem;
+}
+
+.contact{
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1rem;
+}
+
+.contactcard{
+    padding: 1rem 60rem 1rem 1rem;
+}
+
+
+.contactcard>h4{
+    color: var(--tertiary-clr);
+    font-size: 2rem;
+    font-weight: 100;
+    font-family: var(--tertiary-fonts);
+}
+
+.contactcard>p{
+    color: var(--secondary-clr);
+    font-size: 1.4rem;
+    font-weight: 400;
+    font-family: var(--primary-fonts);
+}
+
+.contact-btn{
+    font-size: var(--para-font);
+    font-family: var(--tertiary-fonts);
+    background-color: var(--btn-clr);
+    border: none;
+    padding: 0.8rem 1.2rem;
+    text-align: center;
+    font-weight: 500;    
+}
